--- a/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
+++ b/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
@@ -20,6 +20,8 @@ environment:
       coeff: 0.05
     basemot:
       coeff: 0.05
+    smooth:
+      coeff: -0.025
   terrain:
     frequency: 1.0
     zScale: 0.2
