--- a/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
+++ b/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
@@ -14,33 +14,22 @@ environment:
   k_0: 0.03
   k_d: 0.997
   reward:
-    BaseForwardVelocity:
-      coeff: 0.75
-    BaseLateralAndRotation:
-      coeff: 0.9
-    Work:
-      coeff: 0.50
-    GroundImpact:
-      coeff: 0.003
-    Smoothness:
-      coeff: 0.03
-    ActionMagnitude:
-      coeff: 0.005
-    JointSpeed:
-      coeff: 0.006
-    Orientation:
-      coeff: 2.4
-    ZAcceleration:
-      coeff: 2.0
-    Slip:
-      coeff: 0.4
-    AirTime:
-      coeff: 0.3
-      desired_foot_height: 0.07
-    Torque:
-      coeff: 0.005
-    BaseHeight:
-      coeff: 4.0
+    angularVelocity:
+      coeff: 1.0
+    linearVelocity:
+      coeff: 1.0
+    torque:
+      coeff: 1.0
+    jointSpeed:
+      coeff: 1.0
+    footClearance:
+      coeff: 1.0
+    footSlip:
+      coeff: 1.0
+    orientation:
+      coeff: 1.0
+    smoothness:
+      coeff: 1.0
   terrain:
     frequency: 1.0
     zScale: 0.2
