--- a/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
+++ b/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
@@ -3,27 +3,46 @@ record_video: False
 
 environment:
   render: True
+  visualize_command: False
   num_envs: 100
   eval_every_n: 100
   num_threads: 30
   simulation_dt: 0.001
   #simulation_dt: 0.01
   control_dt: 0.01
+  max_time: 10.0
   gamma: 0.996
   # Curriculum factors
   k_0: 0.03
   k_d: 0.997
   reward:
-    linearVelocity:
-      coeff: 0.05
-    angularVelocity:
-      coeff: 0.04
-    torque:
-      coeff: 0.00002
-    footClearance:
-      coeff: 0.01
-    smoothness:
-      coeff: 0.025
+    BaseForwardVelocity:
+      coeff: 0.75
+    BaseLateralAndRotation:
+      coeff: 0.9
+    Work:
+      coeff: 0.50
+    GroundImpact:
+      coeff: 0
+    Smoothness:
+      coeff: 0.03
+    ActionMagnitude:
+      coeff: 0.005
+    JointSpeed:
+      coeff: 0.006
+    Orientation:
+      coeff: 2.4
+    ZAcceleration:
+      coeff: 2.0
+    Slip:
+      coeff: 0.4
+    AirTime:
+      coeff: 0.3
+      desired_foot_height: 0.07
+    Torque:
+      coeff: 0.005
+    BaseHeight:
+      coeff: 4.0
   terrain:
     frequency: 1.0
     zScale: 0.2
