--- a/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
+++ b/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
@@ -29,7 +29,7 @@ environment:
     ActionMagnitude:
       coeff: 0.005
     JointSpeed:
-      coeff: 0.006
+      coeff: 0 #0.006
     Orientation:
       coeff: 2.4
     ZAcceleration:
