--- a/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
+++ b/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
@@ -29,7 +29,7 @@ environment:
     ActionMagnitude:
       coeff: 0.005
     JointSpeed:
-      coeff: 0 #0.006
+      coeff: 0.001
     Orientation:
       coeff: 2.4
     ZAcceleration:
@@ -38,7 +38,7 @@ environment:
       coeff: 0.4
     AirTime:
       coeff: 0.3
-      desired_foot_height: 0.14
+      desired_foot_height: 0.07
     Torque:
       coeff: 0.005
     BaseHeight:
