--- a/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
+++ b/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
@@ -37,7 +37,7 @@ environment:
     Slip:
       coeff: 0.4
     AirTime:
-      coeff: 0.3
+      coeff: 0.0 #0.3
       desired_foot_height: 0.07
     Torque:
       coeff: 0.005
