--- a/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
+++ b/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
@@ -21,28 +21,28 @@ environment:
     BaseLateralAndRotation:
       coeff: 0.9
     Work:
-      coeff: 0.50
+      coeff: 0 #0.50
     GroundImpact:
-      coeff: 0.00006
+      coeff: 0 #0.00006
     Smoothness:
-      coeff: 0.03
+      coeff: 0 #0.03
     ActionMagnitude:
-      coeff: 0.005
+      coeff: 0 #0.005
     JointSpeed:
-      coeff: 0.006
+      coeff: 0 #0.006
     Orientation:
-      coeff: 2.4
+      coeff: 0 #2.4
     ZAcceleration:
-      coeff: 2.0
+      coeff: 0 #2.0
     Slip:
-      coeff: 0.4
+      coeff: 0 #0.4
     AirTime:
       coeff: 0.0 #0.3
       desired_foot_height: 0.07
     Torque:
-      coeff: 0.005
+      coeff: 0 #0.005
     BaseHeight:
-      coeff: 4.0
+      coeff: 0 #4.0
   terrain:
     frequency: 1.0
     zScale: 0.2
