--- a/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
+++ b/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
@@ -40,7 +40,7 @@ environment:
       coeff: 0.0 #0.3
       desired_foot_height: 0.07
     Torque:
-      coeff: 0 #0.005
+      coeff: 0.005
     BaseHeight:
       coeff: 0 #4.0
   terrain:
