--- a/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
+++ b/raisimGymTorch/raisimGymTorch/env/envs/rsg_a1/cfg.yaml
@@ -19,7 +19,7 @@ environment:
     BaseForwardVelocity:
       coeff: 2
     BaseLateralAndRotation:
-      coeff: 0.9
+      coeff: 0 #0.9
     Work:
       coeff: 0 #0.50
     GroundImpact:
